# wildfire

./: .env  .env.example  .gitignore  Dockerfile  README.md  build_log.txt  build_log_fix_evidently.txt  build_log_optimized.txt  build_log_optimized_utf8.txt  build_log_optimized_v2.txt  build_log_optimized_v2_utf8.txt  build_log_optimized_v3.txt  build_log_optimized_v3_utf8.txt  build_log_optimized_v4_utf8.txt  build_log_optimized_v5.txt  build_log_optimized_v5_utf8.txt  build_log_optimized_v6.txt  build_log_optimized_v6_utf8.txt  build_log_retry.txt  build_log_retry_utf8.txt  build_log_utf8.txt  docker-compose.yml  evidently_files.txt  evidently_files_utf8.txt  mlflow.db  pyproject.toml
.github/workflows/: main.yml
models/: .gitkeep
notebooks/: mlflow.db  p2.ipynb  proj.ipynb  proj.py  win.csv
src/api/: app.py
src/data/: firms_client.py
src/frontend/: app.py
src/model/: wildfire.py
tests/: test_basic.py
