[project]
name = "wildfire-prediction-mlops"
version = "1.0.0"
description = "NASA FIRMS Wildfire Spread Prediction with FastAPI, Gradio, and Evidently."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "torch>=2.2.0",
    "torchvision",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "gradio>=4.20.0",
    "evidently>=0.7.21",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pdm.scripts]
api = "uvicorn src.api.app:app --host 0.0.0.0 --port 8000"
ui  = "python src/frontend/app.py"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "flake8>=7.3.0",
]
